--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <div class="app">
-  <button type="button">login</button>
+  <button type="button" (click)="signInWithGoogle()">login</button>
 </div>
