fixes 18/9 its worksss

--- a/src/app/components/chat-container/chat-container.component.css
+++ b/src/app/components/chat-container/chat-container.component.css
@@ -1,8 +1,10 @@
-.chat-container{
+.chat-container {
     display: flex;
-    &__add-room{
-        position: fixed;
-        bottom: 4rem;
-        right: 4rem;
-    }
-}
+  }
+  
+  .chat-container__add-room {
+    position: fixed;
+    bottom: 4rem;
+    right: 4rem;
+  }
+  
