--- a/src/app/components/chat-container/chat-container.component.css
+++ b/src/app/components/chat-container/chat-container.component.css
@@ -1,10 +1,34 @@
 .chat-container {
-    display: flex;
+  display: flex;
+  position: relative; /* הכפתור ימוקם ביחס למיכל ההורים */
+}
+
+
+  .chat-container__room-list {
+    width: 10rem;
+    margin-right: 2rem;
+    padding-top: 2rem; /* מוסיף מרווח פנימי מלמעלה */
   }
   
-  .chat-container__add-room {
-    position: fixed;
-    bottom: 4rem;
-    right: 4rem;
-  }
-  
+
+.chat-container__chat {
+  flex-grow: 1;
+  flex-grow: 1;
+  display: flex;
+  justify-content: center; /* מרכז את התוכן אופקית */
+  align-items: center; /* מרכז את התוכן אנכית */
+  text-align: center;  /* מוודא שכיתוב כמו h3 יהיה במרכז */
+  height: 100%; /* מבטיח שכל גובה האלמנט ישמש למרכז */
+}
+
+.chat-container__add-room {
+  position: absolute; /* הכפתור ימוקם יחסית להורה */
+  top: 30rem;  /* מרחק מהחלק העליון */
+  left: 1rem; /* מרחק מהצד השמאלי */
+}
+
+button[mat-raised-button] {
+  display: inline-block;
+  padding: 10px 20px;
+  font-size: 1rem;
+}
