--- a/src/app/components/room-list/room-list.component.html
+++ b/src/app/components/room-list/room-list.component.html
@@ -1,8 +1,11 @@
 <div class="rooms">
-    <mat-selection-list>
-      <mat-list-option *ngFor="let room of rooms"[value]="room">
+  <h3>Rooms</h3>
+  <mat-list>
+    <mat-list-item *ngFor="let room of rooms">
+      <a [routerLink]="['/chat', room.id]" class="room-name">
         {{ room.roomName }}
-      </mat-list-option>
-    </mat-selection-list>
-  </div>
-  
+      </a>
+    </mat-list-item>
+  </mat-list>
+</div>
+
